[gd_scene load_steps=6 format=3 uid="uid://d2q1ihgpxku1c"]

[ext_resource type="Script" uid="uid://fsxlwmhc0w3f" path="res://Donovan/Scripts/testGame.gd" id="1_1niee"]
[ext_resource type="PackedScene" uid="uid://wfw6yjg8j70b" path="res://Assets/3D Models/TESTPinch.fbx" id="1_rones"]
[ext_resource type="PackedScene" uid="uid://bh6y0bgfi2ogx" path="res://Assets/3D Models/TESTPinch2.fbx" id="2_fian4"]
[ext_resource type="PackedScene" uid="uid://bxr80dca277iy" path="res://Donovan/Puzzle Concepts In Engine/Scenes/Character.tscn" id="3_qv7yq"]

[sub_resource type="BoxShape3D" id="BoxShape3D_qv7yq"]
size = Vector3(6.264679, 2.7803955, 2.210022)

[node name="Node3D" type="Node3D"]
script = ExtResource("1_1niee")

[node name="TransitionCamera" type="Camera3D" parent="."]

[node name="TESTPinch" parent="." instance=ExtResource("1_rones")]
transform = Transform3D(-3.059797e-06, 0, -30, 0, 30, 0, 70, 0, -1.3113416e-06, -0.30727053, -0.003076315, -14.710882)

[node name="OmniLight3D4" type="OmniLight3D" parent="TESTPinch"]
transform = Transform3D(0.014285714, 0, 6.8126044e-10, 0, 0.033333335, 0, -1.5896078e-09, 0, 0.033333335, 0.15324038, 0.07393736, 0.0061920024)

[node name="OmniLight3D5" type="OmniLight3D" parent="TESTPinch"]
transform = Transform3D(0.016666666, 0, 9.2727115e-10, 0, 0.03333333, 0, -1.8545423e-09, 0, 0.03333333, -0.0010182709, 0.08249386, 0.0061920155)

[node name="OmniLight3D6" type="OmniLight3D" parent="TESTPinch"]
transform = Transform3D(0.016666666, 0, 9.272711e-10, 0, 0.03333333, 0, -1.8545422e-09, 0, 0.03333333, -0.15558577, 0.082493864, 0.0061920285)

[node name="TESTPinch2" parent="." instance=ExtResource("2_fian4")]
transform = Transform3D(2.3849762e-07, 0, -20, 0, 20, 0, 20, 0, 2.3849762e-07, -0.20499939, 0, 6.1756787)

[node name="OmniLight3D" type="OmniLight3D" parent="TESTPinch2"]
transform = Transform3D(0.05, 0, 0, 0, 0.05, 0, 0, 0, 0.05, 0.0035860837, 0.08229554, 0.0030415654)

[node name="OmniLight3D2" type="OmniLight3D" parent="TESTPinch2"]
transform = Transform3D(0.05, 0, 0, 0, 0.05, 0, 0, 0, 0.05, 0.14040652, 0.08229554, 0.021184579)

[node name="OmniLight3D3" type="OmniLight3D" parent="TESTPinch2"]
transform = Transform3D(0.05, 0, 0, 0, 0.05, 0, 0, 0, 0.05, -0.13789847, 0.08229554, 0.01440158)

[node name="CharacterBody3D" parent="." instance=ExtResource("3_qv7yq")]
physics_interpolation_mode = 2
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.6507735, 0.41822588, -0.22592425)
axis_lock_linear_y = true
axis_lock_angular_y = true
fall_acceleration = 0

[node name="CharacterCamera" type="Camera3D" parent="CharacterBody3D"]
transform = Transform3D(1.1924881e-08, 0, -1, 0, 1, 0, 1, 0, 1.1924881e-08, -2.703309, 0.4710598, 0.014511108)
fov = 42.499657

[node name="Area3D" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.7462554)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0041804314, 1.5177964, -3.214521)
shape = SubResource("BoxShape3D_qv7yq")

[node name="RoomCamera" type="Camera3D" parent="Area3D"]
transform = Transform3D(1.192488e-08, 0, -0.99999994, 0, 1, 0, 0.99999994, 0, 1.192488e-08, -3.7594483, 0.9521947, -3.2155137)
fov = 52.343994

[connection signal="area_entered" from="Area3D" to="." method="_on_area_3d_area_entered"]
[connection signal="area_exited" from="Area3D" to="." method="_on_area_3d_area_exited"]
[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
